--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -11,22 +11,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-29 Mon 10:46]
+#+CAPTION: Clock summary at [2018-10-30 Tue 08:50]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:13* |      |      |   0.0 |
+| *Total time*                                                                | *7:11* |      |      |   0.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:13   |      |      |   0.0 |
-| Active                                                                      |        | 2:13 |      |   0.0 |
-| Edit release notes for previous sprint                                      |        |      | 1:58 |   0.0 |
+| Stories                                                                     | 7:11   |      |      |   0.0 |
+| Active                                                                      |        | 7:11 |      |   0.0 |
+| Edit release notes for previous sprint                                      |        |      | 2:03 |   0.0 |
 | Sprint and product backlog grooming                                         |        |      | 0:15 |   0.0 |
+| Work on MASD theory                                                         |        |      | 4:53 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2018-10-29 Mon 10:46]
      :LOGBOOK:
+     CLOCK: [2018-10-29 Mon 10:47]--[2018-10-29 Mon 10:52] =>  0:05
      CLOCK: [2018-10-29 Mon 10:24]--[2018-10-29 Mon 10:46] =>  0:22
      CLOCK: [2018-10-29 Mon 09:27]--[2018-10-29 Mon 10:23] =>  0:56
      CLOCK: [2018-10-29 Mon 08:46]--[2018-10-29 Mon 09:26] =>  0:40
@@ -129,6 +131,19 @@ For all other architectures and/or operative systems, you will need to build Dog
     :END:
 
 Updates to sprint and product backlog.
+
+*** STARTED Work on MASD theory                                       :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-29 Mon 15:32]--[2018-10-29 Mon 18:10] =>  2:38
+    CLOCK: [2018-10-29 Mon 12:35]--[2018-10-29 Mon 14:08] =>  1:33
+    CLOCK: [2018-10-29 Mon 10:53]--[2018-10-29 Mon 11:35] =>  0:42
+    :END:
+
+Work on defining the theory for MASD:
+
+- update latex templates.
+- update API scenarios.
+- finish foundations chapter.
 
 *** Read up on framework and API design                               :story:
 
