--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -11,17 +11,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-30 Tue 08:50]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:11* |      |      |   0.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:11   |      |      |   0.0 |
-| Active                                                                      |        | 7:11 |      |   0.0 |
-| Edit release notes for previous sprint                                      |        |      | 2:03 |   0.0 |
-| Sprint and product backlog grooming                                         |        |      | 0:15 |   0.0 |
-| Work on MASD theory                                                         |        |      | 4:53 |   0.0 |
+#+CAPTION: Clock summary at [2018-10-31 Wed 11:07]
+| <75>                                                                        |         |       |       |       |
+| Headline                                                                    | Time    |       |       |     % |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                                                | *15:49* |       |       |   0.0 |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                                     | 15:49   |       |       |   0.0 |
+| Active                                                                      |         | 15:49 |       |   0.0 |
+| Edit release notes for previous sprint                                      |         |       |  2:03 |   0.0 |
+| Sprint and product backlog grooming                                         |         |       |  0:15 |   0.0 |
+| Work on MASD theory                                                         |         |       | 13:31 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -134,6 +134,10 @@ Updates to sprint and product backlog.
 
 *** STARTED Work on MASD theory                                       :story:
     :LOGBOOK:
+    CLOCK: [2018-10-31 Wed 08:28]--[2018-10-31 Wed 11:07] =>  2:39
+    CLOCK: [2018-10-30 Tue 17:14]--[2018-10-30 Tue 18:31] =>  1:17
+    CLOCK: [2018-10-30 Tue 13:36]--[2018-10-30 Tue 15:08] =>  1:32
+    CLOCK: [2018-10-30 Tue 08:55]--[2018-10-30 Tue 12:05] =>  4:49
     CLOCK: [2018-10-29 Mon 15:32]--[2018-10-29 Mon 18:10] =>  2:38
     CLOCK: [2018-10-29 Mon 12:35]--[2018-10-29 Mon 14:08] =>  1:33
     CLOCK: [2018-10-29 Mon 10:53]--[2018-10-29 Mon 11:35] =>  0:42
@@ -144,6 +148,11 @@ Work on defining the theory for MASD:
 - update latex templates.
 - update API scenarios.
 - finish foundations chapter.
+
+*** STARTED Read up on framework and API design                       :story:
+
+Now that we are creating a top-level API for Dogen we should really
+read up on books about good API design.
 
 *** Read up on framework and API design                               :story:
 
