--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -9,17 +9,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-11-07 Wed 18:29]
+#+CAPTION: Clock summary at [2018-11-08 Thu 17:22]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *59:28* |       |       |   0.0 |
+| *Total time*                                                                | *67:17* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 59:28   |       |       |   0.0 |
-| Active                                                                      |         | 59:28 |       |   0.0 |
+| Stories                                                                     | 67:17   |       |       |   0.0 |
+| Active                                                                      |         | 67:17 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  2:03 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:15 |   0.0 |
-| Work on MASD theory                                                         |         |       | 57:10 |   0.0 |
+| Work on MASD theory                                                         |         |       | 64:59 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -132,6 +132,8 @@ Updates to sprint and product backlog.
 
 *** STARTED Work on MASD theory                                       :story:
     :LOGBOOK:
+    CLOCK: [2018-11-08 Thu 13:40]--[2018-11-08 Thu 17:22] =>  3:42
+    CLOCK: [2018-11-08 Thu 08:15]--[2018-11-08 Thu 12:22] =>  9:07
     CLOCK: [2018-11-07 Wed 13:10]--[2018-11-07 Wed 18:29] =>  5:19
     CLOCK: [2018-11-07 Wed 08:15]--[2018-11-07 Wed 12:21] =>  4:06
     CLOCK: [2018-11-06 Tue 08:15]--[2018-11-06 Tue 10:39] =>  2:24
