--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -9,17 +9,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-11-10 Sat 17:50]
+#+CAPTION: Clock summary at [2018-11-12 Mon 17:35]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *79:10* |       |       |   0.0 |
+| *Total time*                                                                | *86:25* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 79:10   |       |       |   0.0 |
-| Active                                                                      |         | 79:10 |       |   0.0 |
+| Stories                                                                     | 86:25   |       |       |   0.0 |
+| Active                                                                      |         | 86:25 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  2:03 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:15 |   0.0 |
-| Work on MASD theory                                                         |         |       | 76:52 |   0.0 |
+| Work on MASD theory                                                         |         |       | 84:07 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -132,6 +132,8 @@ Updates to sprint and product backlog.
 
 *** STARTED Work on MASD theory                                       :story:
     :LOGBOOK:
+    CLOCK: [2018-11-12 Mon 13:25]--[2018-11-12 Mon 17:35] =>  4:10
+    CLOCK: [2018-11-12 Mon 09:04]--[2018-11-12 Mon 12:09] =>  4:10
     CLOCK: [2018-11-10 Sat 14:10]--[2018-11-10 Sat 17:50] =>  3:40
     CLOCK: [2018-11-09 Fri 14:05]--[2018-11-09 Fri 18:10] =>  4:05
     CLOCK: [2018-11-09 Fri 08:22]--[2018-11-09 Fri 12:30] =>  4:08
