--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -9,17 +9,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-11-12 Mon 17:35]
-| <75>                                                                        |         |       |       |       |
-| Headline                                                                    | Time    |       |       |     % |
-|-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *86:25* |       |       |   0.0 |
-|-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 86:25   |       |       |   0.0 |
-| Active                                                                      |         | 86:25 |       |   0.0 |
-| Edit release notes for previous sprint                                      |         |       |  2:03 |   0.0 |
-| Sprint and product backlog grooming                                         |         |       |  0:15 |   0.0 |
-| Work on MASD theory                                                         |         |       | 84:07 |   0.0 |
+#+CAPTION: Clock summary at [2018-11-15 Thu 19:29]
+| <75>                                                                        |          |        |        |       |
+| Headline                                                                    | Time     |        |        |     % |
+|-----------------------------------------------------------------------------+----------+--------+--------+-------|
+| *Total time*                                                                | *109:42* |        |        |   0.0 |
+|-----------------------------------------------------------------------------+----------+--------+--------+-------|
+| Stories                                                                     | 109:42   |        |        |   0.0 |
+| Active                                                                      |          | 109:42 |        |   0.0 |
+| Edit release notes for previous sprint                                      |          |        |   2:03 |   0.0 |
+| Sprint and product backlog grooming                                         |          |        |   0:15 |   0.0 |
+| Work on MASD theory                                                         |          |        | 107:24 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -132,6 +132,14 @@ Updates to sprint and product backlog.
 
 *** STARTED Work on MASD theory                                       :story:
     :LOGBOOK:
+    CLOCK: [2018-11-15 Thu 18:02]--[2018-11-15 Thu 19:29] =>  1:27
+    CLOCK: [2018-11-15 Thu 13:20]--[2018-11-15 Thu 17:05] =>  3:45
+    CLOCK: [2018-11-15 Thu 09:20]--[2018-11-15 Thu 12:06] =>  2:46
+    CLOCK: [2018-11-15 Thu 09:11]--[2018-11-15 Thu 09:18] =>  0:07
+    CLOCK: [2018-11-14 Wed 13:15]--[2018-11-14 Wed 18:15] =>  5:00
+    CLOCK: [2018-11-14 Wed 08:12]--[2018-11-14 Wed 12:15] =>  4:03
+    CLOCK: [2018-11-13 Tue 14:02]--[2018-11-13 Tue 17:02] =>  3:00
+    CLOCK: [2018-11-13 Tue 09:00]--[2018-11-13 Tue 12:09] =>  3:09
     CLOCK: [2018-11-12 Mon 13:25]--[2018-11-12 Mon 17:35] =>  4:10
     CLOCK: [2018-11-12 Mon 09:04]--[2018-11-12 Mon 12:09] =>  4:10
     CLOCK: [2018-11-10 Sat 14:10]--[2018-11-10 Sat 17:50] =>  3:40
