--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -9,17 +9,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-11-15 Thu 19:29]
+#+CAPTION: Clock summary at [2018-11-16 Fri 20:55]
 | <75>                                                                        |          |        |        |       |
 | Headline                                                                    | Time     |        |        |     % |
 |-----------------------------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                                                | *109:42* |        |        |   0.0 |
+| *Total time*                                                                | *115:56* |        |        |   0.0 |
 |-----------------------------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                                     | 109:42   |        |        |   0.0 |
-| Active                                                                      |          | 109:42 |        |   0.0 |
+| Stories                                                                     | 115:56   |        |        |   0.0 |
+| Active                                                                      |          | 115:56 |        |   0.0 |
 | Edit release notes for previous sprint                                      |          |        |   2:03 |   0.0 |
 | Sprint and product backlog grooming                                         |          |        |   0:15 |   0.0 |
-| Work on MASD theory                                                         |          |        | 107:24 |   0.0 |
+| Work on MASD theory                                                         |          |        | 113:38 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -132,6 +132,9 @@ Updates to sprint and product backlog.
 
 *** STARTED Work on MASD theory                                       :story:
     :LOGBOOK:
+    CLOCK: [2018-11-16 Fri 16:07]--[2018-11-16 Fri 17:07] =>  1:00
+    CLOCK: [2018-11-16 Fri 13:28]--[2018-11-16 Fri 15:00] =>  1:32
+    CLOCK: [2018-11-16 Fri 09:12]--[2018-11-16 Fri 12:54] =>  3:42
     CLOCK: [2018-11-15 Thu 18:02]--[2018-11-15 Thu 19:29] =>  1:27
     CLOCK: [2018-11-15 Thu 13:20]--[2018-11-15 Thu 17:05] =>  3:45
     CLOCK: [2018-11-15 Thu 09:20]--[2018-11-15 Thu 12:06] =>  2:46
